--- a/TheGreatGroupModules/Views/Customers/ApproveCloseAccount.cshtml
+++ b/TheGreatGroupModules/Views/Customers/ApproveCloseAccount.cshtml
@@ -1,6 +1,6 @@
 ﻿@{
-    ViewBag.Title = "กำหนดสิทธิ์พนักงาน";
-    ViewBag.MainMenu = "ระบบจัดการพนักงาน";
+    ViewBag.Title = "ตรวจสอบการเปิด-ปิดบัญชี";
+    ViewBag.MainMenu = "ระบบจัดการข้อมูลลูกค้า";
     Layout = "~/Views/Shared/_LayoutPartial.cshtml";
 }
 
@@ -21,7 +21,7 @@
 
         <div class="white-box">
 
-            <h3 class="m-b-0 m-t-0"> <i class="fa fa-line-chart"></i> @ViewBag.Title</h3> <small class="text-muted db"></small>
+            <h3 class="m-b-0 m-t-0"> <i class="fa fa-check-square-o"></i> @ViewBag.Title</h3> <small class="text-muted db"></small>
             <hr>
 
             <form class="form-horizontal">
@@ -49,7 +49,6 @@
                                     <span class="input-group-addon"><i class="icon-calender"></i></span>
                                 </div>
                             </div>
-
                         </div>
                     </div>
                     <div class="col-md-6">
