--- a/TheGreatGroupModules/Views/Report/NPLReport.cshtml
+++ b/TheGreatGroupModules/Views/Report/NPLReport.cshtml
@@ -1,6 +1,6 @@
 ﻿@{
-    ViewBag.Title = "กำหนดสิทธิ์พนักงาน";
-    ViewBag.MainMenu = "ระบบจัดการพนักงาน";
+    ViewBag.Title = "รายงาน NPL";
+    ViewBag.MainMenu = "รายงาน";
     Layout = "~/Views/Shared/_LayoutPartial.cshtml";
 }
 
@@ -49,7 +49,6 @@
                                     <span class="input-group-addon"><i class="icon-calender"></i></span>
                                 </div>
                             </div>
-
                         </div>
                     </div>
                     <div class="col-md-6">
