add  page approve account

--- a/TheGreatGroupModules/Views/Customers/AddCustomer.cshtml
+++ b/TheGreatGroupModules/Views/Customers/AddCustomer.cshtml
@@ -24,7 +24,7 @@
             <form action="\Customers/AddCustomers" id="form-container" method="post">
                 <div id="form"></div>
                 <br />
-                <div id="button" class="pull-"></div>
+                <div id="button" class="pull-right"></div>
             </form>
         </div>
         </div>
