--- a/TheGreatGroupModules/Views/Customers/ApproveCloseAccount.cshtml
+++ b/TheGreatGroupModules/Views/Customers/ApproveCloseAccount.cshtml
@@ -25,48 +25,24 @@
             <hr>
 
             <form class="form-horizontal">
-                <div class="row">
+               @*<div class="row">
                     <div class="col-md-6">
                         <div class="form-group">
-                            <label for="inputEmail3" class="col-sm-3 control-label">เลือกสาย : </label>
+                            
+                        </div>
+                    </div>
+                </div>*@
+                
+                <div class="row">
+                    <div class="col-md-8">
+                        <div class="form-group">
+                            <label for="inputPassword3" class="col-sm-3 control-label">รหัสประจำตัวประชาชน</label>
                             <div class="col-sm-9">
-                                <select class="form-control select2" id="zoneid">
-                                    <option value> === เลือกสาย === </option>
-                                </select>
-
+                                <input type="text" class="form-control" id="CustomerIdCard" placeholder="รหัสประจำตัวประชาชน">
                             </div>
                         </div>
                     </div>
-                </div>
-                <div class="row">
-
-                    <div class="col-md-6">
-                        <div class="form-group">
-                            <label for="dateFrom" class="col-sm-3 control-label">เลือกวันที่ : </label>
-                            <div class="col-sm-9">
-                                <div class="input-group">
-                                    <input type="text" id="dateFrom" class="form-control" placeholder="วัน/เดือน/ปี" value="@DateTime.Now.ToString("dd/MM/yyyy")">
-                                    <span class="input-group-addon"><i class="icon-calender"></i></span>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-6">
-                        <div class="form-group">
-                            <label for="dateTo" class="col-sm-3 control-label">ถึงวันที่ : </label>
-                            <div class="col-sm-9">
-                                <div class="input-group">
-                                    <input type="text" id="dateTo" class="form-control" placeholder="วัน/เดือน/ปี" value="@DateTime.Now.ToString("dd/MM/yyyy")">
-                                    <span class="input-group-addon"><i class="icon-calender"></i></span>
-                                </div>
-                            </div>
-
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-md-6"></div>
-                    <div class="col-md-6">
+                    <div class="col-md-4">
                         <button type="button" class="btn btn-info waves-effect waves-light m-r-10 pull-in" onclick="SearchStaff()">
                             <i class="fa fa-search"></i>  ค้นหา
                         </button>
@@ -79,9 +55,10 @@
             </form>
             <div id="toast"></div>
             <div id="loadIndicator"></div>
-            <div class="demo-container" id="gridshow">
-                <div id="gridContainer"></div>
-            </div>
+            <h3>รายการสัญญาที่เปิดใช้งานอยู่</h3>    
+            <div id="gridContainer"></div><br>
+            <h3>รายการสัญญาที่ปิดแล้ว</h3>    
+            <div id="gridContainer2"></div>
 
             <br><br><br><br><br><br><br><br>
         </div>
@@ -92,45 +69,7 @@
 @section Scripts {
 
     <!-- Date Picker Plugin JavaScript -->
-    @Scripts.Render("../Scripts/src/open_close_account_report.js")
+    @Scripts.Render("../Scripts/src/approve_close_account.js")
 
-    <script>
-        $(function () {
-            $.fn.datepicker.defaults.language = 'th';
-            $('#dateFrom').datepicker(
-                {
-                    autoclose: true,
-                    format: 'dd/mm/yyyy',
-                    todayHighlight: true,
-                    changeMonth: true,
-                    changeYear: true,
-                }
-            );
-
-            $('#dateTo').datepicker(
-                {
-                    autoclose: true,
-                    format: 'dd/mm/yyyy',
-                    todayHighlight: true,
-                    changeMonth: true,
-                    changeYear: true,
-                }
-            );
-
-            $.get("../Staffs/GetZone")
-                .done(function (data) {
-                    console.log(data);
-                    if (data.success == true) {
-
-                        $.each(data.data, function (key, value) {
-                            $("#zoneid").append('<option value="' + value.ID + '"' + ">" + value.Value + "</option>");
-                        });
-                    }
-                });
-
-
-        })
-
-
-    </script>
+   
 }
