--- a/TheGreatGroupModules/Views/Staffs/EditStaff.cshtml
+++ b/TheGreatGroupModules/Views/Staffs/EditStaff.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "เพิ่มพนักงาน";
+    ViewBag.Title = "แก้ไขข้อมูลพนักงาน";
     ViewBag.MainMenu = "ระบบจัดการพนักงาน";
     Layout = "~/Views/Shared/_LayoutPartial.cshtml";
 }
@@ -18,7 +18,7 @@
 
     <div class="col-lg-12 ">
         <div class="white-box">
-         
+
             <h3 class="m-b-0 m-t-0"> <i class="fa fa-user-plus"></i> @ViewBag.Title</h3> <small class="text-muted db"></small>
             <hr>
             <div id="loadIndicator"></div>
@@ -33,5 +33,5 @@
 
 @section Scripts {
     @Scripts.Render("../Scripts/src/add_staff.js")
-   
+
 }
