--- a/TheGreatGroupModules/Views/Staffs/ListStaff.cshtml
+++ b/TheGreatGroupModules/Views/Staffs/ListStaff.cshtml
@@ -12,14 +12,13 @@
         </ol>
     </div>
     <!-- /.page title -->
-    <a href="javascript:history.back();" class="btn btn-default pull-right m-l-20 hidden-xs hidden-sm waves-effect waves-light"><i class="fa fa-mail-reply"></i> ย้อนกลับ</a>
 </div>
 <div class="row">
 
     <div class="col-lg-12 ">
 
         <div class="white-box">
-            <a onclick="NewZone()" class="btn btn-info pull-right"><i class="fa fa-plus"></i> เพิ่มพนักงาน</a>
+            <a onclick="NewStaff()" class="btn btn-info pull-right"><i class="fa fa-plus"></i> เพิ่มพนักงาน</a>
             <h3 class="m-b-0 m-t-0"> <i class="fa fa-list-alt"></i> @ViewBag.Title</h3> <small class="text-muted db"></small>
             <hr>
 
@@ -52,10 +51,13 @@
                 }
             });
 
-
+            
         });
 
+        function NewStaff() {
+            window.location = "\AddStaff?staffID=0";
 
+        }
 
     </script>
 }
