--- a/TheGreatGroupModules/Views/Customers/Contract.cshtml
+++ b/TheGreatGroupModules/Views/Customers/Contract.cshtml
@@ -55,7 +55,7 @@
                     <div id="form"></div>
                     
                     <div class="text-right">
-                        <a class="btn btn-info" onclick="Submit_Click()"> <i class="fa fa-save"></i> บันทึก </a>
+                        <a class="btn btn-info" id="myButton"> <i class="fa fa-save"></i> บันทึก </a>
                     </div>
     <hr>
     <h4 class="m-b-0">  ข้อมูลสินค้า </h4>
