--- a/TheGreatGroupModules/Views/Staffs/ListStaffRole.cshtml
+++ b/TheGreatGroupModules/Views/Staffs/ListStaffRole.cshtml
@@ -1,6 +1,6 @@
 ﻿@{
     ViewBag.Title = "จัดการกลุ่มพนักงาน";
-    ViewBag.MainMenu = "ระบบจัดการพนักงาน";
+    ViewBag.MainMenu = "ตั้งค่าระบบ";
     Layout = "~/Views/Shared/_LayoutPartial.cshtml";
 }
 <div class="row bg-title">
