--- a/TheGreatGroupModules/Views/Shared/_LayoutPartial.cshtml
+++ b/TheGreatGroupModules/Views/Shared/_LayoutPartial.cshtml
@@ -187,8 +187,8 @@
                         <ul class="dropdown-menu dropdown-user animated flipInY">
                             <li>
                                 <div class="dw-user-box">
-                                    <div class="u-img"><img src="@Session["imageUrl"]" alt="user" /></div>
-                                    <div class="u-text"><h4>@Session["iusername"]</h4><p class="text-muted">พนักงานขาย</p><a href="profile.html" class="btn btn-rounded btn-danger btn-sm">View Profile</a></div>
+                                    <div class="u-img"><img src="~/@Session["imageUrl"]" alt="user" /></div>
+                                    <div class="u-text"><h4>@Session["iusername"]</h4><p class="text-muted">พนักงานขาย</p><a href="#" class="btn btn-rounded btn-danger btn-sm">View Profile</a></div>
                                 </div>
                             </li>
                             <li role="separator" class="divider"></li>
