update location / holiday

--- a/TheGreatGroupModules/Views/Setting/Holiday.cshtml
+++ b/TheGreatGroupModules/Views/Setting/Holiday.cshtml
@@ -24,7 +24,7 @@
 
             <!-- ใส่ Grid-->
             <div id="gridListHoliday" style="vertical-align: middle;"></div>
-            <div id="modalAddEditStaffRole"></div>
+            <div id="modalAddEditHoliday"></div>
 
 
 
