--- a/TheGreatGroupModules/Views/Shared/_LayoutPartial.cshtml
+++ b/TheGreatGroupModules/Views/Shared/_LayoutPartial.cshtml
@@ -183,11 +183,11 @@
                         </form>
                     </li>*@
                     <li class="dropdown">
-                        <a class="dropdown-toggle profile-pic" data-toggle="dropdown" href="#"> <img src="@Session["imageUrl"]" alt=" user-img" width="36" class="img-circle"><b class="hidden-xs">@Session["iusername"]</b><span class="caret"></span> </a>
+                        <a class="dropdown-toggle profile-pic" data-toggle="dropdown" href="#"> <img src="../@Session["imageUrl"]" alt=" user-img" width="36" class="img-circle"><b class="hidden-xs">@Session["iusername"]</b><span class="caret"></span> </a>
                         <ul class="dropdown-menu dropdown-user animated flipInY">
                             <li>
                                 <div class="dw-user-box">
-                                    <div class="u-img"><img src="~/@Session["imageUrl"]" alt="user" /></div>
+                                    <div class="u-img"><img src="../@Session["imageUrl"]" alt="user" /></div>
                                     <div class="u-text"><h4>@Session["iusername"]</h4><p class="text-muted">พนักงานขาย</p><a href="#" class="btn btn-rounded btn-danger btn-sm">View Profile</a></div>
                                 </div>
                             </li>
