--- a/TheGreatGroupModules/Views/ManagePayment/CustomerHistory.cshtml
+++ b/TheGreatGroupModules/Views/ManagePayment/CustomerHistory.cshtml
@@ -15,68 +15,80 @@
 
 <div class="row">
 
-    <div class="col-lg-12 ">
+    <div class="col-lg-12">
 
         <div class="white-box">
 
             <h3 class="m-b-0 m-t-0"> <i class="fa fa-file-text-o"></i> @ViewBag.Title</h3>
             <hr>
 
-            <form class="form-horizontal">
-                <div class="row">
-                    <div class="col-md-7">
-                        <div class="form-group">
-                            <label for="inputEmail3" class="col-sm-3 control-label">เลือกสาย : </label>
-                            <div class="col-sm-9">
-                                <select class="form-control select2" id="zoneid">
-                                    <option value> === เลือกสาย === </option>
-                                </select>
+            @*<form class="form-horizontal">
+                    <div class="row">
+                        <div class="col-md-7">
+                            <div class="form-group">
+                                <label for="inputEmail3" class="col-sm-3 control-label">เลือกสาย : </label>
+                                <div class="col-sm-9">
+                                    <select class="form-control select2" id="zoneid">
+                                        <option value> === เลือกสาย === </option>
+                                    </select>
+
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <div class="col-md-7">
+                            <div class="form-group">
+                                <label for="inputEmail3" class="col-sm-3 control-label">เลือกลูกค้า : </label>
+                                <div class="col-sm-9">
+                                    <select class="form-control select2" id="CustomerID">
+                                        <option value> === เลือกลูกค้า === </option>
+                                    </select>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <div class="col-md-7">
+                            <div class="form-group">
+                                <label for="inputEmail3" class="col-sm-3 control-label">เลือกเลขที่สัญญา : </label>
+                                <div class="col-sm-9">
+                                    <select class="form-control select2" id="ContractID">
+                                        <option value> === เลือกเลขที่สัญญา === </option>
+                                    </select>
+                                </div>
 
                             </div>
                         </div>
                     </div>
-                </div>
-
-                <div class="row">
-                    <div class="col-md-7">
-                        <div class="form-group">
-                            <label for="inputEmail3" class="col-sm-3 control-label">เลือกลูกค้า : </label>
-                            <div class="col-sm-9">
-                                <select class="form-control select2" id="CustomerID">
-                                    <option value> === เลือกลูกค้า === </option>
-                                </select>
-                            </div>
+                    <div class="row">
+                        <div class="col-md-2"></div>
+                        <div class="col-md-4">
+                            <div id="loadIndicator"></div> <button type="button" id="btnSearch" class="btn btn-info waves-effect waves-light m-r-10" onclick="SearchCustomer()">
+                                <!-- <i class="fa fa-search"></i> -->   ค้นหาข้อมูล
+                            </button>
+                            <button type="button" class="btn btn-default waves-effect waves-light " onclick="btnClear()">
+                                <!-- <i class="fa fa-search"></i> -->  ล้างข้อมูล
+                            </button>
                         </div>
                     </div>
-                </div>
 
-                <div class="row">
-                    <div class="col-md-7">
-                        <div class="form-group">
-                            <label for="inputEmail3" class="col-sm-3 control-label">เลือกเลขที่สัญญา : </label>
-                            <div class="col-sm-9">
-                                <select class="form-control select2" id="ContractID">
-                                    <option value> === เลือกเลขที่สัญญา === </option>
-                                </select>
-                            </div>
-
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-md-2"></div>
-                    <div class="col-md-4">
-                        <div id="loadIndicator"></div> <button type="button" id="btnSearch" class="btn btn-info waves-effect waves-light m-r-10" onclick="SearchCustomer()">
-                            <!-- <i class="fa fa-search"></i> -->   ค้นหาข้อมูล
-                        </button>
-                        <button type="button" class="btn btn-default waves-effect waves-light " onclick="btnClear()">
-                            <!-- <i class="fa fa-search"></i> -->  ล้างข้อมูล
-                        </button>
-                    </div>
-                </div>
-
-            </form>
+                </form>*@
+            <div id="form"></div><br>
+            <div class="row">
+                <div class="col-md-2 "> </div>
+                <button type="button" class="btn btn-info waves-effect waves-light m-r-10" id="btnSearch" onclick="SearchData()">  ค้นหา </button>
+                <button type="button" class="btn btn-default waves-effect waves-light m-r-10" id="btnClear" onclick="ClearData()">  ล้างข้อมูล </button>
+            </div>
             <div id="toast"></div>
+            <div id="loadIndicator"></div>
+    
+            <div class="demo-container" id="gridshow">
+                <div id="gridContainer"></div>
+            </div>
+            <br><br><br><br><br><br><br><br>
         </div>
     </div>
 </div>
@@ -86,138 +98,138 @@
 
     @Scripts.Render("../Scripts/src/customer_history.js")
     <script>
-        $(function () {
-            $.fn.datepicker.defaults.language = 'th';
+        //$(function () {
+        //    $.fn.datepicker.defaults.language = 'th';
 
-            $('#btnSearch').prop('disabled', 'disabled');
-            $.get("../Staffs/GetZone")
-                .done(function (data) {
-                    console.log(data);
-                    if (data.success == true) {
+        //    $('#btnSearch').prop('disabled', 'disabled');
+        //    $.get("../Staffs/GetZone")
+        //        .done(function (data) {
+        //            console.log(data);
+        //            if (data.success == true) {
 
-                        $.each(data.data, function (key, value) {
-                            $("#zoneid").append('<option value="' + value.ID + '"' + ">" + value.Value + "</option>");
-                        });
-                    }
-                });
+        //                $.each(data.data, function (key, value) {
+        //                    $("#zoneid").append('<option value="' + value.ID + '"' + ">" + value.Value + "</option>");
+        //                });
+        //            }
+        //        });
 
-            $.get("../Customers/GetCustomerByZone?zoneId=0")
-                .done(function (data) {
+        //    $.get("../Customers/GetCustomerByZone?zoneId=0")
+        //        .done(function (data) {
 
-                    if (data.success == true) {
+        //            if (data.success == true) {
 
-                        $.each(data.data, function (key, value) {
-                            $("#CustomerID").append('<option value="' + value.CustomerID + '"' + ">" + value.CustomerName + "</option>");
-                        });
-                    }
-                });
+        //                $.each(data.data, function (key, value) {
+        //                    $("#CustomerID").append('<option value="' + value.CustomerID + '"' + ">" + value.CustomerName + "</option>");
+        //                });
+        //            }
+        //        });
 
-            $.get("../Contract/GetListContract?CustomerID=0")
-                .done(function (data) {
+        //    $.get("../Contract/GetListContract?CustomerID=0")
+        //        .done(function (data) {
 
-                    if (data.success == true) {
+        //            if (data.success == true) {
 
-                        $.each(data.data, function (key, value) {
-                            $("#ContractID").append('<option value="' + value.ContractID + '"' + ">" + value.ContractNumber + "</option>");
-                        });
-                    }
-                });
+        //                $.each(data.data, function (key, value) {
+        //                    $("#ContractID").append('<option value="' + value.ContractID + '"' + ">" + value.ContractNumber + "</option>");
+        //                });
+        //            }
+        //        });
 
 
-            $("#zoneid").change(function () {
+        //    $("#zoneid").change(function () {
 
-                $.get("../Customers/GetCustomerByZone?zoneId=" + $("#zoneid").val())
-                    .done(function (data) {
+        //        $.get("../Customers/GetCustomerByZone?zoneId=" + $("#zoneid").val())
+        //            .done(function (data) {
                        
-                        if (data.success == true) {
-                            if (data.data.length > 0) {
-                                $('#CustomerID')
-                                    .find('option')
-                                    .remove()
-                                    .end()
-                                    .append('<option value="" selected>=== เลือกลูกค้า === </option>');
+        //                if (data.success == true) {
+        //                    if (data.data.length > 0) {
+        //                        $('#CustomerID')
+        //                            .find('option')
+        //                            .remove()
+        //                            .end()
+        //                            .append('<option value="" selected>=== เลือกลูกค้า === </option>');
                      
 
-                                $('#ContractID')
-                                    .find('option')
-                                    .remove()
-                                    .end()
-                                    .append('<option value="" selected>=== เลือกหนังสือสัญญา === </option>');
-                                $('#CustomerID').prop('disabled', false);
-                                $('#ContractID').prop('disabled', false);
+        //                        $('#ContractID')
+        //                            .find('option')
+        //                            .remove()
+        //                            .end()
+        //                            .append('<option value="" selected>=== เลือกหนังสือสัญญา === </option>');
+        //                        $('#CustomerID').prop('disabled', false);
+        //                        $('#ContractID').prop('disabled', false);
 
-                                $.each(data.data, function (key, value) {
-                                    $("#CustomerID").append('<option value="' + value.CustomerID + '"' + ">" + value.CustomerName + "</option>");
-                                });}
-                            else {
-                                $('#CustomerID')
-                                    .find('option')
-                                    .remove()
-                                    .end()
-                                    .append('<option value="" selected>=== ไม่มีข้อมูลลูกค้า === </option>');
-                                $('#CustomerID').prop('disabled', 'disabled');
-                                $('#ContractID')
-                                    .find('option')
-                                    .remove()
-                                    .end()
-                                    .append('<option value="" selected>=== ไม่มีข้อมูลสัญญา === </option>');}
-                                $('#ContractID').prop('disabled', 'disabled');
+        //                        $.each(data.data, function (key, value) {
+        //                            $("#CustomerID").append('<option value="' + value.CustomerID + '"' + ">" + value.CustomerName + "</option>");
+        //                        });}
+        //                    else {
+        //                        $('#CustomerID')
+        //                            .find('option')
+        //                            .remove()
+        //                            .end()
+        //                            .append('<option value="" selected>=== ไม่มีข้อมูลลูกค้า === </option>');
+        //                        $('#CustomerID').prop('disabled', 'disabled');
+        //                        $('#ContractID')
+        //                            .find('option')
+        //                            .remove()
+        //                            .end()
+        //                            .append('<option value="" selected>=== ไม่มีข้อมูลสัญญา === </option>');}
+        //                        $('#ContractID').prop('disabled', 'disabled');
                        
 
-                        }
-                    });
+        //                }
+        //            });
 
-            });
+        //    });
 
-            $("#CustomerID").change(function () {
+        //    $("#CustomerID").change(function () {
 
-                $.get("../Contract/GetListContract?CustomerID=" + $("#CustomerID").val())
-                    .done(function (data) {
-                        if (data.success == true) {
-                            if (data.data.length > 0) {
-                                $('#ContractID')
-                                    .find('option')
-                                    .remove()
-                                    .end()
-                                    .append('<option value="" selected>=== เลือกหนังสือสัญญา === </option>');
+        //        $.get("../Contract/GetListContract?CustomerID=" + $("#CustomerID").val())
+        //            .done(function (data) {
+        //                if (data.success == true) {
+        //                    if (data.data.length > 0) {
+        //                        $('#ContractID')
+        //                            .find('option')
+        //                            .remove()
+        //                            .end()
+        //                            .append('<option value="" selected>=== เลือกหนังสือสัญญา === </option>');
 
 
 
-                                $.each(data.data, function (key, value) {
-                                    $("#ContractID").append('<option value="' + value.ContractID + '"' + ">" + value.ContractNumber + "</option>");
-                                });
-                                $('#ContractID').prop('disabled', false);
+        //                        $.each(data.data, function (key, value) {
+        //                            $("#ContractID").append('<option value="' + value.ContractID + '"' + ">" + value.ContractNumber + "</option>");
+        //                        });
+        //                        $('#ContractID').prop('disabled', false);
                           
-                            } else {
-                                $('#ContractID')
-                                    .find('option')
-                                    .remove()
-                                    .end()
-                                    .append('<option value="" selected>=== ไม่มีข้อมูลสัญญา === </option>');
-                                $('#ContractID').prop('disabled', 'disabled');
+        //                    } else {
+        //                        $('#ContractID')
+        //                            .find('option')
+        //                            .remove()
+        //                            .end()
+        //                            .append('<option value="" selected>=== ไม่มีข้อมูลสัญญา === </option>');
+        //                        $('#ContractID').prop('disabled', 'disabled');
                                
-                            }
-                            $('#btnSearch').prop('disabled', 'disabled');
+        //                    }
+        //                    $('#btnSearch').prop('disabled', 'disabled');
                             
-                        }
-                    });
+        //                }
+        //            });
 
-            });
+        //    });
 
 
 
-            $("#ContractID").change(function () {
+        //    $("#ContractID").change(function () {
            
-                if ($("#ContractID").val() == '') {
-                    $('#btnSearch').prop('disabled', 'disabled');
-                } else {
-                    $('#btnSearch').prop('disabled', false);
-                 }
+        //        if ($("#ContractID").val() == '') {
+        //            $('#btnSearch').prop('disabled', 'disabled');
+        //        } else {
+        //            $('#btnSearch').prop('disabled', false);
+        //         }
 
                
-            });
+        //    });
 
-        })
+        //})
 
 
     </script>
