add button Print Receipt

--- a/TheGreatGroupModules/Views/Customers/Contract.cshtml
+++ b/TheGreatGroupModules/Views/Customers/Contract.cshtml
@@ -108,8 +108,9 @@
                     <div class="text-right">
 
                         <a id="print" class="btn btn-default btn-outline" href="javascript:history.back();"> <span><i class="fa fa-mail-reply"></i> ย้อนกลับ</span> </a>
-                    
+                       
                         <a class="btn btn-success" onclick="PrintCard()"> <i class="fa fa-print"></i> พิมพ์บัตรลูกค้า </a>
+                        <a class="btn btn-success" onclick="PrintReceipt()"> <i class="fa fa-print"></i> พิมพ์ใบเสร็จรับเงิน </a>
                         <a class="btn btn-success" onclick="PrintContract()"> <i class="fa fa-print"></i> พิมพ์สัญญา </a>
                     </div>
                 </div>
